test_programs/compile_failure/regression_10413/src/main.nr
fn main() {
    foo(());
}

#[fold]
fn foo(_: ()) {}
